--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  chopper: ^4.0.1
+  json_annotation: ^4.4.0
   flutter:
     sdk: flutter
 
@@ -35,8 +37,12 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
-  build_runner: null
-  built_value_generator: ^8.1.1
+  chopper_generator: ^4.0.5
+  build_runner: ^2.1.7
+  json_annotation: ^4.4.0
+  json_serializable: ^6.1.4
+
+  swagger_dart_code_generator: ^2.2.5+1
 
   flutter_test:
     sdk: flutter
